[package]
name = "near-ql-db"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0-rc.0", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "2.0.0-rc.0"
near-lake-framework = "0.5"
r2d2 = "0.8"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
