[package]
name = "near-ql-db"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0-rc.0", features = ["chrono", "r2d2", "sqlite"] }
diesel_migrations = "2.0.0-rc.0"
hex = "0.4"
near-lake-framework = "0.5"
parking_lot = "0.12"
r2d2 = "0.8"
serde_json = "1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
