[package]
name = "qlytics-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
chrono = "0.4"
either = "1"
futures-core = "0.3"
graphql_client = "0.12"
humantime = "2"
itertools = "0.10"
near-lake-framework = "0.7"
near-primitives = "0.16"
near-jsonrpc-client = "0.5"
qlytics-core = { path = "../app-core" }
qlytics-graphql = { path = "../app-graphql" }
parking_lot = "0.12"
rayon = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
thiserror = "1"
tokio = "1"
