[package]
name = "qlytics-send"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
either = "1"
futures-util = "0.3"
graphql_client = "0.12"
itertools = "0.10"
near-lake-framework = "0.7"
qlytics-core = { path = "../app-core" }
qlytics-graphql = { path = "../app-graphql" }
reqwest = "0.11"
thiserror = "1"
tokio-stream = "0.1"
