[package]
name = "qlytics"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.9"
near-lake-framework = "0.5"
qlytics-db = { path = "../app-db" }
qlytics-indexer = { path = "../app-indexer" }
parking_lot = "0.12"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt"] }
