[package]
name = "qlytics"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.9"
near-lake-framework = "0.5"
qlytics-core = { path = "../app-core" }
qlytics-db = { path = "../app-db" }
qlytics-indexer = { path = "../app-indexer" }
qlytics-send = { path = "../app-send" }
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt"] }
